[gd_scene load_steps=17 format=3 uid="uid://br17xhjkbqcui"]

[ext_resource type="Script" path="res://scripts/gdscript/ui.gd" id="1_ok621"]
[ext_resource type="Texture2D" uid="uid://dhnyrysqpyo5j" path="res://assets/bg_.png" id="2_r2j4s"]
[ext_resource type="FontFile" uid="uid://bd78jbxhdwig6" path="res://assets/fonts/HomeLimited.ttf" id="3_bij1g"]
[ext_resource type="PackedScene" uid="uid://5ce6ya46djxu" path="res://scenes/post_shaders.tscn" id="3_w1c41"]
[ext_resource type="Script" path="res://scripts/gdscript/radio.gd" id="4_clqgh"]
[ext_resource type="AudioStream" uid="uid://clo05otne70yw" path="res://music/Two Medium Two Topping Pizzas with Double Pepperoni.wav" id="4_gqs2u"]
[ext_resource type="AudioStream" uid="uid://fb3tvyc8syo" path="res://music/sfx/throwedit.wav" id="6_1njin"]
[ext_resource type="AudioStream" uid="uid://dj7xhg7x3lt3k" path="res://music/level0.mp3" id="6_wumbs"]
[ext_resource type="AudioStream" uid="uid://beqae8vasyn63" path="res://music/level1.mp3" id="7_0qgaf"]
[ext_resource type="AudioStream" uid="uid://bjpo7x1j3c4v3" path="res://music/level2.mp3" id="8_n5v6k"]
[ext_resource type="AudioStream" uid="uid://3nlhetgit5sm" path="res://music/AvecaStampCollectingRobot.mp3" id="9_bk5pq"]
[ext_resource type="AudioStream" uid="uid://5l0lqtdtokqd" path="res://music/sfx/jump.wav" id="11_beots"]
[ext_resource type="AudioStream" uid="uid://dimwrjgnm5jph" path="res://music/sfx/hit.wav" id="11_bhfxm"]

[sub_resource type="Environment" id="Environment_i5bbw"]
background_mode = 3
glow_enabled = true
glow_intensity = 5.78
glow_strength = 1.58
glow_bloom = 1.0

[sub_resource type="Theme" id="Theme_nd2hv"]

[sub_resource type="Texture2DRD" id="Texture2DRD_e72oy"]

[node name="root" type="CanvasLayer" node_paths=PackedStringArray("main_menu", "level_menu", "settings_menu")]
script = ExtResource("1_ok621")
main_menu = NodePath("main_ui")
level_menu = NodePath("level_menu")
settings_menu = NodePath("settings_menu")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_i5bbw")

[node name="main_ui" type="CanvasGroup" parent="."]

[node name="Lust" type="Sprite2D" parent="main_ui"]
texture_filter = 1
texture_repeat = 2
position = Vector2(628, 253)
scale = Vector2(0.59, 0.59)
texture = ExtResource("2_r2j4s")

[node name="D_SHADOW" type="ColorRect" parent="main_ui"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 41.0
offset_top = 37.0
offset_right = 431.18
offset_bottom = 116.5
color = Color(0, 0, 0, 0.364706)

[node name="PLAY_P" type="ColorRect" parent="main_ui"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 34.0
offset_top = 31.0
offset_right = 424.18
offset_bottom = 110.5
color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="PLAY" type="Button" parent="main_ui"]
custom_minimum_size = Vector2(390, 80)
offset_left = 34.0
offset_top = 31.0
offset_right = 424.0
offset_bottom = 111.0
localize_numeral_system = false
theme = SubResource("Theme_nd2hv")
theme_override_fonts/font = ExtResource("3_bij1g")
theme_override_font_sizes/font_size = 36
text = "PLAY"
icon = SubResource("Texture2DRD_e72oy")

[node name="D_SHADOW2" type="ColorRect" parent="main_ui"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 41.0
offset_top = 260.0
offset_right = 431.18
offset_bottom = 339.5
color = Color(0, 0, 0, 0.364706)

[node name="PLAY_P2" type="ColorRect" parent="main_ui"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 34.0
offset_top = 253.0
offset_right = 424.18
offset_bottom = 332.5
color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="LEVEL" type="Button" parent="main_ui"]
custom_minimum_size = Vector2(390, 80)
offset_left = 34.0
offset_top = 253.0
offset_right = 424.0
offset_bottom = 333.0
localize_numeral_system = false
theme = SubResource("Theme_nd2hv")
theme_override_fonts/font = ExtResource("3_bij1g")
theme_override_font_sizes/font_size = 36
text = "LEVEL SELECT
"
icon = SubResource("Texture2DRD_e72oy")

[node name="D_SHADOW3" type="ColorRect" parent="main_ui"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 41.0
offset_top = 151.0
offset_right = 431.18
offset_bottom = 230.5
color = Color(0, 0, 0, 0.364706)

[node name="PLAY_P3" type="ColorRect" parent="main_ui"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 34.0
offset_top = 141.0
offset_right = 424.18
offset_bottom = 220.5
color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="SETTINGS" type="Button" parent="main_ui"]
custom_minimum_size = Vector2(390, 80)
offset_left = 34.0
offset_top = 141.0
offset_right = 424.0
offset_bottom = 221.0
localize_numeral_system = false
theme = SubResource("Theme_nd2hv")
theme_override_fonts/font = ExtResource("3_bij1g")
theme_override_font_sizes/font_size = 36
text = "SETTINGS"
icon = SubResource("Texture2DRD_e72oy")

[node name="settings_menu" type="CanvasGroup" parent="."]
visible = false
position = Vector2(-15, 0)

[node name="Lust" type="Sprite2D" parent="settings_menu"]
texture_filter = 1
texture_repeat = 2
position = Vector2(641, 253)
scale = Vector2(0.59, 0.59)
texture = ExtResource("2_r2j4s")

[node name="D_SHADOW" type="ColorRect" parent="settings_menu"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 29.0
offset_top = 25.0
offset_right = 419.18
offset_bottom = 104.5
scale = Vector2(1.12, 3.12)
color = Color(0, 0, 0, 0.364706)

[node name="PLAY_P" type="ColorRect" parent="settings_menu"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 27.0
offset_top = 21.0
offset_right = 417.18
offset_bottom = 100.5
scale = Vector2(1.11105, 3.10802)
color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="Sfx" type="HSlider" parent="settings_menu"]
custom_minimum_size = Vector2(390.3, 26.73)
offset_left = 44.0
offset_top = 138.0
offset_right = 434.3
offset_bottom = 164.73
min_value = 0.001
max_value = 1.0
step = 0.05
value = 0.501

[node name="RichTextLabel" type="RichTextLabel" parent="settings_menu"]
physics_interpolation_mode = 1
custom_minimum_size = Vector2(123.89, 0)
offset_left = 201.0
offset_top = 111.0
offset_right = 324.89
offset_bottom = 151.0
theme_override_fonts/normal_font = ExtResource("3_bij1g")
text = "SFX"

[node name="Music" type="HSlider" parent="settings_menu"]
custom_minimum_size = Vector2(390.3, 26.73)
offset_left = 44.0
offset_top = 64.0
offset_right = 434.3
offset_bottom = 90.73
min_value = 0.001
max_value = 1.0
step = 0.05
value = 0.501

[node name="RichTextLabel3" type="RichTextLabel" parent="settings_menu"]
physics_interpolation_mode = 1
custom_minimum_size = Vector2(123.89, 0)
offset_left = 201.0
offset_top = 37.0
offset_right = 324.89
offset_bottom = 77.0
theme_override_fonts/normal_font = ExtResource("3_bij1g")
text = "MUSIC"

[node name="D_SHADOW2" type="ColorRect" parent="settings_menu"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 50.0
offset_top = 472.0
offset_right = 440.18
offset_bottom = 551.5
color = Color(0, 0, 0, 0.364706)

[node name="PLAY_P2" type="ColorRect" parent="settings_menu"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 44.0
offset_top = 465.0
offset_right = 434.18
offset_bottom = 544.5
color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="BACK" type="Button" parent="settings_menu"]
custom_minimum_size = Vector2(390, 0)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 44.0
offset_top = 465.0
offset_right = 434.0
offset_bottom = 545.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_bij1g")
theme_override_font_sizes/font_size = 36
text = "BACK
"
icon = SubResource("Texture2DRD_e72oy")

[node name="RichTextLabel2" type="RichTextLabel" parent="settings_menu"]
physics_interpolation_mode = 1
custom_minimum_size = Vector2(105.56, 0)
offset_left = 184.0
offset_top = 192.0
offset_right = 310.0
offset_bottom = 232.0
theme_override_fonts/normal_font = ExtResource("3_bij1g")
text = "FULL SCREEN"

[node name="CheckButton" type="CheckButton" parent="settings_menu"]
offset_left = 212.0
offset_top = 222.0
offset_right = 256.0
offset_bottom = 246.0

[node name="level_menu" type="CanvasGroup" parent="."]
visible = false

[node name="Lust" type="Sprite2D" parent="level_menu"]
texture_filter = 1
texture_repeat = 2
position = Vector2(641, 253)
scale = Vector2(0.59, 0.59)
texture = ExtResource("2_r2j4s")

[node name="D_SHADOW" type="ColorRect" parent="level_menu"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 38.0
offset_top = 36.0
offset_right = 428.18
offset_bottom = 115.5
color = Color(0, 0, 0, 0.364706)

[node name="PLAY_P" type="ColorRect" parent="level_menu"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 34.0
offset_top = 31.0
offset_right = 424.18
offset_bottom = 110.5
color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="LEVEL 1" type="Button" parent="level_menu"]
custom_minimum_size = Vector2(390, 80)
offset_left = 34.0
offset_top = 31.0
offset_right = 424.0
offset_bottom = 111.0
theme_override_fonts/font = ExtResource("3_bij1g")
theme_override_font_sizes/font_size = 36
text = "LEVEL 1"
icon = SubResource("Texture2DRD_e72oy")

[node name="D_SHADOW2" type="ColorRect" parent="level_menu"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 38.0
offset_top = 258.0
offset_right = 428.18
offset_bottom = 337.5
color = Color(0, 0, 0, 0.364706)

[node name="PLAY_P2" type="ColorRect" parent="level_menu"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 34.0
offset_top = 253.0
offset_right = 424.18
offset_bottom = 332.5
color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="D_SHADOW3" type="ColorRect" parent="level_menu"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 38.0
offset_top = 145.0
offset_right = 428.18
offset_bottom = 224.5
color = Color(0, 0, 0, 0.364706)

[node name="PLAY_P3" type="ColorRect" parent="level_menu"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 34.0
offset_top = 141.0
offset_right = 424.18
offset_bottom = 220.5
color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="LEVEL 2" type="Button" parent="level_menu"]
custom_minimum_size = Vector2(390, 80)
offset_left = 34.0
offset_top = 141.0
offset_right = 424.0
offset_bottom = 221.0
theme_override_fonts/font = ExtResource("3_bij1g")
theme_override_font_sizes/font_size = 36
text = "LEVEL 2"
icon = SubResource("Texture2DRD_e72oy")

[node name="LEVEL 3" type="Button" parent="level_menu"]
custom_minimum_size = Vector2(390, 80)
offset_left = 34.0
offset_top = 253.0
offset_right = 424.0
offset_bottom = 333.0
theme_override_fonts/font = ExtResource("3_bij1g")
theme_override_font_sizes/font_size = 36
text = "LEVEL 3
"
icon = SubResource("Texture2DRD_e72oy")

[node name="D_SHADOW4" type="ColorRect" parent="level_menu"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 38.0
offset_top = 414.0
offset_right = 428.18
offset_bottom = 493.5
color = Color(0, 0, 0, 0.364706)

[node name="PLAY_P4" type="ColorRect" parent="level_menu"]
custom_minimum_size = Vector2(390.18, 79.5)
offset_left = 34.0
offset_top = 411.0
offset_right = 424.18
offset_bottom = 490.5
color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="BACK" type="Button" parent="level_menu"]
custom_minimum_size = Vector2(390, 0)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_top = 411.0
offset_right = 424.0
offset_bottom = 491.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_bij1g")
theme_override_font_sizes/font_size = 36
text = "BACK
"
icon = SubResource("Texture2DRD_e72oy")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_gqs2u")
script = ExtResource("4_clqgh")

[node name="Throwedit" type="AudioStreamPlayer2D" parent="AudioStreamPlayer2D"]
position = Vector2(274, 621)
stream = ExtResource("6_1njin")

[node name="Level0" type="AudioStreamPlayer2D" parent="AudioStreamPlayer2D"]
position = Vector2(199, 344)
stream = ExtResource("6_wumbs")
volume_db = 18.91
max_distance = 1e+06
bus = &"music"
parameters/looping = true

[node name="Level1" type="AudioStreamPlayer2D" parent="AudioStreamPlayer2D"]
position = Vector2(153, 379)
stream = ExtResource("7_0qgaf")
volume_db = 9.98
parameters/looping = true

[node name="Level2" type="AudioStreamPlayer2D" parent="AudioStreamPlayer2D"]
position = Vector2(169, 347)
stream = ExtResource("8_n5v6k")
volume_db = -33.09
panning_strength = 0.0
parameters/looping = true

[node name="TwoMediumTwoToppingPizzasWithDoublePepperoni" type="AudioStreamPlayer2D" parent="AudioStreamPlayer2D"]
position = Vector2(724, 466)
stream = ExtResource("4_gqs2u")
volume_db = 18.584
bus = &"music"

[node name="AvecaStampCollectingRobot" type="AudioStreamPlayer2D" parent="AudioStreamPlayer2D"]
position = Vector2(634, 452)
stream = ExtResource("9_bk5pq")
volume_db = 13.657
bus = &"music"

[node name="Hit" type="AudioStreamPlayer2D" parent="AudioStreamPlayer2D"]
position = Vector2(808, 186)
stream = ExtResource("11_bhfxm")

[node name="Jump" type="AudioStreamPlayer2D" parent="AudioStreamPlayer2D"]
position = Vector2(47, 570)
stream = ExtResource("11_beots")

[node name="PostShaders" parent="." instance=ExtResource("3_w1c41")]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(637, 360)

[connection signal="send_mus" from="." to="AudioStreamPlayer2D" method="_on_root_send_mus"]
[connection signal="send_sfx" from="." to="AudioStreamPlayer2D" method="_on_root_send_sfx"]
[connection signal="button_down" from="main_ui/PLAY" to="." method="_play"]
[connection signal="mouse_entered" from="main_ui/PLAY" to="." method="_on_button_1_hover"]
[connection signal="button_up" from="main_ui/LEVEL" to="." method="_level_select"]
[connection signal="mouse_entered" from="main_ui/LEVEL" to="." method="_on_button_2_hover"]
[connection signal="mouse_entered" from="main_ui/LEVEL" to="." method="_on_level_mouse_entered"]
[connection signal="button_up" from="main_ui/SETTINGS" to="." method="_settings"]
[connection signal="mouse_entered" from="main_ui/SETTINGS" to="." method="_on_button_3_hover"]
[connection signal="value_changed" from="settings_menu/Sfx" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="settings_menu/Music" to="." method="_on_music_value_changed"]
[connection signal="button_down" from="settings_menu/BACK" to="." method="_back"]
[connection signal="mouse_entered" from="settings_menu/BACK" to="." method="_on_button_4_hover"]
[connection signal="toggled" from="settings_menu/CheckButton" to="." method="_windowed"]
[connection signal="button_down" from="level_menu/LEVEL 1" to="." method="_load_level_0"]
[connection signal="mouse_entered" from="level_menu/LEVEL 1" to="." method="_on_button_4_hover"]
[connection signal="button_down" from="level_menu/LEVEL 2" to="." method="_load_level_1"]
[connection signal="mouse_entered" from="level_menu/LEVEL 2" to="." method="_on_button_5_hover"]
[connection signal="button_down" from="level_menu/LEVEL 3" to="." method="_load_level_2"]
[connection signal="mouse_entered" from="level_menu/LEVEL 3" to="." method="_on_button_6_hover"]
[connection signal="button_down" from="level_menu/BACK" to="." method="_back"]
[connection signal="mouse_entered" from="level_menu/BACK" to="." method="_on_button_7_hover"]
[connection signal="finished" from="AudioStreamPlayer2D/TwoMediumTwoToppingPizzasWithDoublePepperoni" to="AudioStreamPlayer2D" method="_on_two_medium_two_topping_pizzas_with_double_pepperoni_finished"]
